# yapilet

./: .gitignore  .mise.toml  LICENSE  README.ja.md  README.md  USAGE.ja.md  USAGE.md  main.py  pyproject.toml
cli/: pyproject.toml
cli/src/yapilet/: __init__.py
cli/src/yapilet/cli/: __init__.py  _di.py  main.py
cli/tests/: test_cli.py
configs/actions/: echo_chain.yaml
configs/singles/: 001_get_simple_api_test.yaml  101_explain_with_fineman_technique.yaml  echo.yaml  echo_chat.yaml  groq_chat.yaml  groq_model_list.yaml
core/: pyproject.toml
core/src/yapilet/: __init__.py
core/src/yapilet/core/application/: __init__.py  execute_action.py  execute_chat.py  execute_messages.py  execute_single.py
core/src/yapilet/core/infrastructure/: __init__.py  httpx_adapter.py  mock_adapter.py
core/src/yapilet/core/models/: __init__.py  action_chain.py  api_request.py  messages_request.py
core/src/yapilet/core/ports/: __init__.py  http_port.py
core/src/yapilet/core/services/: __init__.py  api_client.py  config_loader.py  placeholder.py
core/tests/: test_action_chain.py  test_api_client.py  test_config_loader.py  test_execute_chat.py  test_execute_messages.py  test_httpx_adapter.py  test_placeholder.py
gui/: pyproject.toml
gui/src/yapilet/gui/: _di.py  app.py  app_store.py
gui/src/yapilet/gui/pages/: action_page.py  chat_page.py  settings_page.py  single_page.py
