[project]
name = "yapilet"
version = "0.1.1"
description = "YAML-driven API request and action-chain runner"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "core",
    "cli",
]

[tool.uv.sources]
yapilet-core = { workspace = true }
yapilet-cli = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "core/src"

[[tool.mypy.overrides]]
module = ["yaml", "jmespath", "click"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["core/tests", "cli/tests"]
pythonpath = ["core/src", "cli/src"]
