[project]
name = "yapilet-cli"
version = "0.1.0"
description = "yapilet CLI entry point"
requires-python = ">=3.13"
dependencies = [
    "yapilet-core",
    "click>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yapilet"]

[project.scripts]
yapilet = "yapilet.cli.main:cli"
