[project]
name = "yapilet-core"
version = "0.1.0"
description = "yapilet core domain (models / services / ports / application)"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jmespath>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yapilet"]
