[project]
name = "yapilet-core"
version = "0.1.0"
description = "YAML-driven API request and action chain — core library"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
    { name = "Shogo Ogami", email = "sg.tao.so@gmail.com" },
]
keywords = ["api", "yaml", "http", "cli", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jmespath>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yapilet"]
