[project]
name = "yapilet-gui"
version = "0.2.0"
description = "YAML-driven API toolkit — Flet desktop GUI"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "Shogo Ogami", email = "sg.tao.so@gmail.com" }]
dependencies = [
    "yapilet-core",
    "flet>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yapilet"]

[project.scripts]
yapilet-gui = "yapilet.gui.app:main_entry"
